--- a/modules/ROOT/pages/available-menu-items.adoc
+++ b/modules/ROOT/pages/available-menu-items.adoc
@@ -130,6 +130,11 @@ include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 :plugincode: image
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 
+:plugincategory: premium
+:pluginname: Import from Word
+:plugincode: importword
+include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
+
 :plugincategory: opensource
 :pluginname: Insert Date/Time
 :plugincode: insertdatetime
