--- a/modules/ROOT/pages/available-toolbar-buttons.adoc
+++ b/modules/ROOT/pages/available-toolbar-buttons.adoc
@@ -148,6 +148,11 @@ include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
 :plugincategory: premium
+:pluginname: Import from Word
+:plugincode: importword
+include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
+
+:plugincategory: premium
 :pluginname: Image Editing
 :plugincode: editimage
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
