--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -89,6 +89,12 @@ Turn {productname} documents into single files with inline CSS, ready, in partic
 
 a|
 [.lead]
+xref:importword.adoc[Import from Word]
+
+Import `.docx` (Word documents) or `.dotx` (Word templates) files into the editor.
+
+a|
+[.lead]
 xref:editimage.adoc[Image Editing]
 
 Image Editing features for {productname}.
