--- a/modules/ROOT/partials/misc/premium-plugin-list.adoc
+++ b/modules/ROOT/partials/misc/premium-plugin-list.adoc
@@ -10,6 +10,7 @@
 * xref:exportword.adoc[Export to Word]
 * xref:footnotes.adoc[Footnotes]
 * xref:formatpainter.adoc[Format Painter]
+* xref:importword.adoc[Import from Word]
 * xref:inline-css.adoc[Inline CSS]
 * xref:editimage.adoc[Image Editing]
 * xref:linkchecker.adoc[Link Checker]
