--- a/modules/ROOT/pages/editor-command-identifiers.adoc
+++ b/modules/ROOT/pages/editor-command-identifiers.adoc
@@ -231,6 +231,7 @@ Commands are available for the following plugins:
 * xref:fullscreen[Full Screen]
 * xref:help[Help]
 * xref:image[Image]
+* xref:importword[Import from Word]
 * xref:editimage[Image Editing]
 * xref:insertdatetime[Insert Date/Time]
 * xref:link[Link]
@@ -385,6 +386,13 @@ include::partial$commands/help-cmds.adoc[leveloffset=+3]
 The following command requires the xref:image.adoc[Image (`+image+`)] plugin.
 
 include::partial$commands/image-cmds.adoc[leveloffset=+3]
+
+[[import-word]]
+==== Import from Word
+
+The following command requires the xref:importword.adoc[Import from Word (`+importword+`)] plugin.
+
+include::partial$commands/importword-cmds.adoc[leveloffset=+3]
 
 [[editimage]]
 ==== Image Editing
