--- a/modules/ROOT/partials/configuration/defaultmenuitems.adoc
+++ b/modules/ROOT/partials/configuration/defaultmenuitems.adoc
@@ -3,7 +3,7 @@
 tinymce.init({
   selector: 'textarea',  // change this value according to your HTML
   menu: {
-    file: { title: 'File', items: 'newdocument restoredraft | preview | exportpdf exportword | print | deleteallconversations' },
+    file: { title: 'File', items: 'newdocument restoredraft | preview | importword exportpdf exportword | print | deleteallconversations' },
     edit: { title: 'Edit', items: 'undo redo | cut copy paste pastetext | selectall | searchreplace' },
     view: { title: 'View', items: 'code | visualaid visualchars visualblocks | spellchecker | preview fullscreen | showcomments' },
     insert: { title: 'Insert', items: 'image link media addcomment pageembed codesample inserttable | charmap emoticons hr | pagebreak nonbreaking anchor tableofcontents | insertdatetime' },
