--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -133,7 +133,7 @@ a|
 [.lead]
 xref:revisionhistory.adoc[Revision History]
 
-Visually view changes and effortlessly restore versions of a document.
+Easily view document changes and restore previous versions.
 
 a|
 [.lead]
