--- a/modules/ROOT/pages/migration-from-6x.adoc
+++ b/modules/ROOT/pages/migration-from-6x.adoc
@@ -208,12 +208,12 @@ tinymce.init({
 ----
 
 
-[[deprecated-plugins]]
-== Deprecated Plugins
+[[removed-plugins]]
+== Removed Plugins
 
 In {productname} 7.0 the below list is a list of deprecated plugins, config options and APIs according to the following list:
 
-[[deprecated-plugins-template-plugin]]
+[[removed-plugins-template-plugin]]
 === Template plugin
 
 The open-source `Template` plugin and associated config options have been removed in {productname} 7.0.
